--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>111111108 willy</title>
     <link rel="shortcut icon" href="img/cat lcon.png" type="image/x-icon">
+    <style>
+        img{
+            width: 350px;
+            height:300px;
+        }
+    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header>
     <h1>KOMA-NATSU Web</h1>
     <p>介紹一下我家的偶像貓咪們！</p>
+
 </header>
 <nav>
     <ul>
@@ -32,14 +40,14 @@
     <h2>我家的貓咪</h2>
     <section>
         <h3>●小町（KOMACHI・♀）</h3>
-        <img src="img/komachi.jpg" width="320" height="200" alt="小町">
+        <img src="img/komachi.jpg" alt="小町">
         <p>出生不到2個月就到家的貓姐姐。</p>
         <p>從出生就是養在溫室裡的花朵，所以非常膽小怕生。因為太怕生，只要聽到門鈴聲就會躲起來，所以就算是來我家的客人也難以見到。</p>
         <a href="cats/komachi.html"><p>→更多介紹</p></a>
     </section>
     <section>
         <h3>●小夏（KONATSU・♀）</h3>
-        <img src="img/konatsu.jpg" width="320" height="200" alt="小昂">
+        <img src="img/konatsu.jpg" alt="小昂">
         <p>為了讓小町有個伴，在1年後抱回來貓妹妹。</p>
         <p>原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。</p>
         <a href="cats/konatsu.html"><p>→更多介紹</p></a>
