--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel="shortcut icon" href="img/cat lcon.png" type="image/x-icon">
     <style>
         img{
-            width: 350px;
+            width: 400px;
             height:300px;
         }
     </style>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Limelight">
 </head>
 <body>
 <header>
-    <h1>KOMA-NATSU Web</h1>
+    <h1> <span style="font-size: 1.5em; color: rgb(228, 255, 129);"> K</span>OMA-NATSU Web</h1>
     <p>介紹一下我家的偶像貓咪們！</p>
 
 </header>
@@ -28,34 +29,31 @@
     </ul>
 </nav>
 
-<main>
+<main id="contents">
 
 <section id="intro">
-    <h2>關於本站</h2>
-    <p>歡迎光臨本站。這裡是介紹我家貓主子姐妹的曬貓網站，有大量的可愛相片。</p>
-    <p>※未經許可，請勿擅自複製轉載。</p>
+    <h2 class="h">關於本站</h2>
+    <p>歡迎光臨本站。這裡是介紹我家貓主子姐妹的曬貓網站，有大量的可愛相片。<br> <strong> ※未經許可，請勿擅自複製轉載。</strong></p>
 </section>
 
 <section id="cats">
-    <h2>我家的貓咪</h2>
+    <h2 class="h">我家的貓咪</h2>
     <section>
-        <h3>●小町（KOMACHI・♀）</h3>
-        <img src="img/komachi.jpg" alt="小町">
-        <p>出生不到2個月就到家的貓姐姐。</p>
-        <p>從出生就是養在溫室裡的花朵，所以非常膽小怕生。因為太怕生，只要聽到門鈴聲就會躲起來，所以就算是來我家的客人也難以見到。</p>
-        <a href="cats/komachi.html"><p>→更多介紹</p></a>
+        <h3 class="h-sub">●小町 <span> （KOMACHI・♀）</span></h3>
+        <img class="A" src="img/komachi.jpg" alt="小町">
+        <p>出生不到2個月就到家的貓姐姐。 <br> 從出生就是養在溫室裡的花朵，所以非常膽小怕生。因為太怕生，只要聽到門鈴聲就會躲起來，所以就算是來我家的客人也難以見到。</p>
+        <a href="komachi.html"><p class="b">→更多介紹</p></a>
     </section>
     <section>
-        <h3>●小夏（KONATSU・♀）</h3>
-        <img src="img/konatsu.jpg" alt="小昂">
-        <p>為了讓小町有個伴，在1年後抱回來貓妹妹。</p>
-        <p>原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。</p>
-        <a href="cats/konatsu.html"><p>→更多介紹</p></a>
+        <h3 class="h-sub">●小夏 <span> （KONATSU・♀）</span></h3>
+        <img class="A" src="img/konatsu.jpg" alt="小昂">
+        <p>為了讓小町有個伴，在1年後抱回來貓妹妹。 <br> 原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。</p>
+        <a href="konatsu.html"><p class="b">→更多介紹</p></a>
     </section>
 </section>
 
 <section id="profile">
-    <h2>飼主介紹</h2>
+    <h2 class="h">飼主介紹</h2>
     <img src="img/avatar.png" alt="">
     <dl>
         <dt>暱稱 ：</dt><dd>roka404</dd>
